--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "author": "鱼小柔",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
-    
-    "webpack-dev-server": "^3.8.0",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
-
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   }
 }
