--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
-    
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
+  },
+  "dependencies": {
+    "javascript-state-machine": "^3.1.0"
   }
 }
