--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "javascript-state-machine": "^3.1.0"
+    "javascript-state-machine": "^3.1.0",
+    "jquery": "^3.4.1"
   }
 }
